CHANGES IN FLTK 1.1.0b7

	- More documentation updates...
	- Fl_Text_Display would lockup when all text was
	  deleted; for example, when running the editor
	  demo, you couldn't load a second file.
	- Added Fl::lock() and friends from FLTK 2.0 to
	  support multi-threaded applications; see the
	  "threads" demo for an example of this.
	- Fl_Check_Button and Fl_Round_Button now use the
	  FL_NO_BOX box type to show the background of the
	  parent widget.
	- Tweeked the plastic boxtype code to draw with the
	  right shading for narrow, but horizontal buttons.
	- Fl_Progress now shades the bounding box instead of
	  drawing a polygon inside it.
	- Fl::warning() under WIN32 defaults to no action. This
	  avoids warning dialogs when an image file cannot be
	  loaded.
	- Some Win32 drivers would draw into wrong buffers
	  after OpenGL mode change
	- Mac OS X support works 95%
	- The file chooser would cause a segfault if you
	  clicked in an empty area of the file list.
	- Fl_File_Icon::labeltype() would cause a segfault
	  if the value pointer was NULL.
	- Fl_File_Icon::load_image() could cause segfaults
	  (NULL data and incrementing the data pointer too
	  often.)
	- Fl_File_Icon::load_image() now handles 2-byte
	  per color XPM files.
	- Some Win32 drivers would draw into wrong buffers
	  after OpenGL mode change.
	- Message handling and Resources for MacOS port.
	- Fl_Help_View could get in an infinitely loop when
	  determining the maximum width of the page; this
	  was due to a bug in the get_length() method with
	  percentages (100% width would cause the bug.)
	- Don't need -lgdi32 for CygWin, since -mwindows
	  does this for us.
	- The WIN32 event handler did not properly handle
	  WM_SYNCPAINT messages.
	- Fl_Tabs now uses the boxtype exclusively to draw
	  both the tabs and surrounding box, so alternate
	  box types actually work and the look is a little
	  nicer.
	- Fixed the drawing of large areas with the new
	  plastic boxtypes.